--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,17 @@
     <string name="o_0">O<sub><small>0</small></sub> :-</string>
     <string name="o_1">O<sub><small>1</small></sub> :-</string>
 
+    <string name="a_0">A<sub><small>0</small></sub> :-</string>
+    <string name="b_0">B<sub><small>0</small></sub> :-</string>
+
+
     <string name="i_1">I<sub><small>1</small></sub> :-</string>
     <string name="i_0">I<sub><small>0</small></sub> :-</string>
+
+    <string name="c_0">C<sub><small>0</small></sub> :-</string>
+
+    <string name="c_out">C<sub><small>out</small></sub> :-</string>
+
+
     <string name="usage_instruction">Welcome,\n click on menu icon\n or \nSwipe from left \nfor the list of logic gates.</string>
 </resources>
